# contextrie

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  contributing.md  eslint.config.js  package.json  plan.md  readme.md  tsconfig.build.json
.github/workflows/: pr-checks.yml
benchmarks/: README.md
cli/: README.md  TODO.md  index.test.ts  index.ts  package.json
client/: config.ts  index.ts
coding-agent/: CONTRIBUTING.md  README.md  example-task.md  index.ts  package.json
coding-agent/cli/: index.ts
coding-agent/constants/: paths.ts
coding-agent/lib/: id.ts  index.ts  io.ts
coding-agent/plan-v1/: readme.md
coding-agent/services/: index.ts  init.ts
coding-agent/templates/: index.ts  progress.ts
coding-agent/types/: task.ts
core/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  index.ts  package.json
core/agents/: README.md  index.ts
core/assessor/: score.ts
core/compose/: compress.ts  density.ts  format.ts
core/ingest/: flat-map.test.ts  flat-map.ts  index.ts  ingest.ts  map-reduce.test.ts  map-reduce.ts  parse-markdown.test.ts  parse-markdown.ts  types.ts
demo/: .env.example  README.md  apex_products.md  article.md  clauses.csv  complaint.txt  demo.ts  nexus_earnings.md
docs/: README.md  package.json
examples/: README.md
models/: source.ts
parsers/: CONTRIBUTING.md  README.md  package.json  tsconfig.json
python/: CONTRIBUTING.md  README.md  pyproject.toml
python/src/contextrie/: __init__.py  _runtime.py
python/src/contextrie/agents/: __init__.py  composer.py  indexing.py  judge.py
python/src/contextrie/sources/: __init__.py  complex_document.py  document.py  list.py  reference_document.py  reference_list.py
python/src/contextrie/types/: __init__.py  model.py  source.py
python/src/contextrie_convert/: __init__.py  cli.py  converter.py
python/tests/: conftest.py  test_agents.py  test_converter.py  test_sources.py
(+63 files in other folders)
